--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.username=postgres
 spring.datasource.password=1
 spring.jpa.generate-ddl=true
 
-spring.mustache.expose-request-attributes=true
+spring.freemarker.expose-request-attributes=true
